templates/deployment_taint.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: taint-deployment
spec:
    replicas: 8
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: nginx:1.7.9
                  ports:
                      - containerPort: 80
