templates/pod_mysql.yaml
apiVersion: v1
kind: Pod
metadata:
    name: mysql
    namespace: default
spec:
    containers:
        - name: mysql
          image: mysql:5.5
