templates/pod_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
    name: redis
    namespace: linuxcon
spec:
    containers:
      - name: busybox
        image: busybox
        command:
          - sleep
          - "3600"
