templates/pod_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
        name: nginx
spec:
        containers:
                - name: nginx
                  image: nginx
