templates/pod_redis.yaml
apiVersion: v1
kind: Pod
metadata:
    name: redis
    namespace: default
spec:
    containers:
        - name: redis
          image: redis
