templates/pod_resource_limit_request.yaml
apiVersion: v1
kind: Pod
metadata:
    name: busybox
    namespace: limited
spec:
    containers:
        - name: busybox
          image: busybox
          command:
              - sleep
              - "3600"
          resources:
              requests:
                  cpu: "0.3"
                  memory: "300Mi"
              limits:
                  cpu: "0.5"
                  memory: "400Mi"
