templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    ports:
        - port: 80
          type: NodePort
    selector:
        app: nginx
